@@ -1,9 +1,23 @@
-<!-- $Id: changes.html,v 1.11 2001/01/31 18:41:34 leg Exp $ -->
+<!-- $Id: changes.html,v 1.12 2001/02/19 19:34:22 leg Exp $ -->
 
 <HTML><HEAD>
 <TITLE>Changes to the Cyrus IMAP Server</TITLE>
 </HEAD><BODY>
 <H1>                   Changes to the Cyrus IMAP Server</H1>
+
+<h2>Changes to the cyrus IMAP Server since 2.0.11</h2>
+<ul>
+<li> portability fixes involving <tt>setrlimit()</tt></li>
+
+<li> fixed compiler warnings</li>
+
+<li> the STARTTLS command will only accept TLSv1 now, not SSLv2/v3.
+The <tt>imaps</tt> port is unaffected by this change.</li>
+
+<li> <tt>timsieved</tt> no longer returns garbage strings.</li>
+
+</ul>
+
 
 <h2>Changes to the cyrus IMAP Server since 2.0.9</h2>
 <ul>
@@ -1191,7 +1205,7 @@ restore tab before breaking out of loop.
 
 
 <P><HR>
-last modified: $Date: 2001/01/31 18:41:34 $
+last modified: $Date: 2001/02/19 19:34:22 $
 <br>
 <A HREF="index.html">Return</A> to the Cyrus IMAP Server Home Page
 </BODY></HTML>
